hello page created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -16,6 +16,7 @@
 
     <script src="/home.page/app.config.js"></script>
     <script src="/home.page/navbar.controller.js"></script>
+    <script src="/hello.page/lello.component.js"></script>
 </head>
 <body>
 
