--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Messenger</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta firstName="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/resources/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/home.page/home-page.styles.css"/>
