hello page built up

--- a/src/main/webapp/hello.page/hello.template.html
+++ b/src/main/webapp/hello.page/hello.template.html
@@ -2,6 +2,22 @@
     <link rel="stylesheet" href="/hello.page/hello.styles.css"/>
 </head>
 
-<div>
-    Hello in messenger!
+<div id="body">
+
+    <div id="greeting">
+        Hello in messenger!
+    </div>
+
+    <div id="login">
+        <a href="#!/">
+            <button type="button" class="btn btn-default btn-authorization">Login</button>
+        </a>
+    </div>
+
+    <div id="signUp">
+        <a href="#!/">
+            <button type="button" class="btn btn-default btn-authorization">Sign Up</button>
+        </a>
+    </div>
+
 </div>
