registration front end

--- a/src/main/webapp/hello.page/hello.template.html
+++ b/src/main/webapp/hello.page/hello.template.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="signUp">
-        <a href="#!/">
+        <a href="#!/signUp">
             <button type="button" class="btn btn-default btn-authorization">Sign Up</button>
         </a>
     </div>
