--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -17,6 +17,7 @@
     <script src="/home.page/app.config.js"></script>
     <script src="/home.page/navbar.controller.js"></script>
     <script src="/hello.page/hello.component.js"></script>
+    <script src="/sign.up/sign-up.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
