front end of login in

--- a/src/main/webapp/hello.page/hello.template.html
+++ b/src/main/webapp/hello.page/hello.template.html
@@ -9,7 +9,7 @@
     </div>
 
     <div id="login">
-        <a href="#!/">
+        <a href="#!/login">
             <button type="button" class="btn btn-default btn-authorization">Login</button>
         </a>
     </div>
