--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -18,6 +18,7 @@
     <script src="/home.page/navbar.controller.js"></script>
     <script src="/hello.page/hello.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
+    <script src="/login/login.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
