profile page created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -19,6 +19,7 @@
     <script src="/hello.page/hello.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/login/login.component.js"></script>
+    <script src="/profile/profile.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
