--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -16,6 +16,7 @@
 
     <script src="/home.page/app.config.js"></script>
     <script src="/home.page/navbar.controller.js"></script>
+    <script src="/home.page/home.component.js"></script>
     <script src="/hello.page/hello.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/login/login.component.js"></script>
@@ -23,7 +24,49 @@
 </head>
 <body ng-controller="navbarCtrl">
 
-    <div style="margin-left: 3%; font-size: 16px; margin-top: 5px;">Messenger</div>
+
+    <nav class="navbar navbar-default" id="main-navbar" ng-controller="navbarCtrl">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse">
+
+                <ul class="nav navbar-nav">
+                    <li><a href="#!/home">Messenger</a></li>
+                </ul>
+
+                <form class="navbar-form navbar-left" ng-submit="search()">
+                    <div class="input-group">
+                        <input ng-model="searchParameter" placeholder="Search"
+                               class="form-control search-group" id="search-input">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default search-group" id="search-submit" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                        <li><a><span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}</a></li>
+                    </div>
+
+                    <div class="nav navbar-nav" id="user-functions-button-panel">
+                        <li ng-if="isAuthority('ROLE_ANONYMOUS')">
+                            <a href="#!/signUp"><span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up</a>
+                        </li>
+                        <li ng-if="isAuthority('ROLE_ANONYMOUS')">
+                            <a href="#!/login"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
+                        </li>
+                        <li ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                            <a href="" ng-click="logout()">
+                                <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout
+                            </a>
+                        </li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="panel panel-default" id="content-panel">
 
