--- a/src/main/webapp/hello.page/hello.template.html
+++ b/src/main/webapp/hello.page/hello.template.html
@@ -10,13 +10,13 @@
 
     <div id="login">
         <a href="#!/login">
-            <button type="button" class="btn btn-default btn-authorization">Login</button>
+            <button type="button" class="btn btn-authorization">Login</button>
         </a>
     </div>
 
     <div id="signUp">
         <a href="#!/signUp">
-            <button type="button" class="btn btn-default btn-authorization">Sign Up</button>
+            <button type="button" class="btn btn-authorization">Sign Up</button>
         </a>
     </div>
 
