--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -25,12 +25,12 @@
 <body ng-controller="navbarCtrl">
 
 
-    <nav class="navbar navbar-default" id="main-navbar" ng-controller="navbarCtrl">
+    <nav class="navbar navbar-inverse" id="main-navbar" ng-controller="navbarCtrl">
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
 
                 <ul class="nav navbar-nav">
-                    <li><a href="#!/home">Messenger</a></li>
+                    <li><a id="home-button" href="#!/home">Messenger</a></li>
                 </ul>
 
                 <form class="navbar-form navbar-left" ng-submit="search()">
@@ -47,18 +47,24 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                        <li><a><span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}</a></li>
+                        <li><a id="a-user-name">
+                            <span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}
+                        </a></li>
                     </div>
 
                     <div class="nav navbar-nav" id="user-functions-button-panel">
                         <li ng-if="isAuthority('ROLE_ANONYMOUS')">
-                            <a href="#!/signUp"><span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up</a>
+                            <a href="#!/signUp" id="sign-up-button">
+                                <span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up
+                            </a>
                         </li>
                         <li ng-if="isAuthority('ROLE_ANONYMOUS')">
-                            <a href="#!/login"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
+                            <a href="#!/login" id="logout-button">
+                                <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login
+                            </a>
                         </li>
                         <li ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                            <a href="" ng-click="logout()">
+                            <a href="" ng-click="logout()" id="login-button">
                                 <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout
                             </a>
                         </li>
@@ -68,7 +74,7 @@
         </div>
     </nav>
 
-    <div class="panel panel-default" id="content-panel">
+    <div id="content-panel">
 
         <div ng-view></div>
 
