--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -3,5 +3,21 @@
 </head>
 
 <div>
-    {{user.email}}
+    <div id="username-container">
+        {{user.firstName}} {{user.lastName}}
+
+        <div id="photo-container">
+            <img ng-src="data:image/jpeg;base64,{{user.photo}}" id="photo">
+        </div>
+
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary social-button">Friends</button>
+            <button type="button" class="btn btn-primary social-button">Subscribers</button>
+            <button type="button" class="btn btn-primary social-button">Chats</button>
+        </div>
+
+        <div>
+            user information
+        </div>
+    </div>
 </div>
