--- a/src/main/webapp/sign.up/sign-up.template.html
+++ b/src/main/webapp/sign.up/sign-up.template.html
@@ -59,7 +59,7 @@
         <div class="form-group">
             <div class="col-sm-3"></div>
             <div class="col-sm-9">
-                <button type="submit" class="btn btn-custom btn-lg btn-block">Sign up</button>
+                <button type="submit" class="btn btn-primary btn-block">Sign up</button>
             </div>
         </div>
 
