--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -22,6 +22,7 @@
     <script src="/login/login.component.js"></script>
     <script src="/profile/profile.component.js"></script>
     <script src="/people/people.component.js"></script>
+    <script src="/chat/chat.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
