--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -14,7 +14,8 @@
             <button type="button" class="btn btn-primary social-button">Friends</button>
             <button type="button" class="btn btn-primary social-button">Subscribers</button>
             <button type="button" class="btn btn-primary social-button" ng-if="myProfile()">Chats</button>
-            <button type="button" class="btn btn-primary social-button" ng-if="!myProfile()">Message</button>
+            <button type="button" class="btn btn-primary social-button" ng-if="!myProfile()"
+                    ng-click="openChat()">Message</button>
         </div>
 
         <div>
