STOMP client created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -13,6 +13,8 @@
     <script src="/resources/js/ui-bootstrap-tpls.min.js"></script>
     <script src="/resources/js/angular-resource.min.js"></script>
     <script src="/resources/js/angular-route.min.js"></script>
+    <script src="/resources/js/sockjs-0.3.min.js"></script>
+    <script src="/resources/js/stomp.min.js"></script>
 
     <script src="/home.page/app.config.js"></script>
     <script src="/home.page/navbar.controller.js"></script>
