--- a/src/main/webapp/chat/chat.template.html
+++ b/src/main/webapp/chat/chat.template.html
@@ -11,12 +11,14 @@
     </div>
 
     <div class="col-md-9" id="chat-container">
-        <div class="list-group" ng-repeat="message in messages">
-                <div class="list-group-item">
+        <div id="messages-container">
+            <div class="list-group" ng-repeat="message in messages">
+                    <div class="list-group-item">
 
-                {{message.user.firstName}} {{message.user.lastName}}:
-                <p>{{message.body}}</p>
+                    {{message.user.firstName}} {{message.user.lastName}}:
+                    <p>{{message.body}}</p>
 
+                </div>
             </div>
         </div>
 
