--- a/src/main/webapp/chat/chat.template.html
+++ b/src/main/webapp/chat/chat.template.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="textarea-container">
-            <textarea ng-model="newMessage" placeholder="Input message"
+            <textarea id="message-textarea" ng-model="newMessage" placeholder="Input message"
                       ng-keydown="$event.keyCode === 13 && action()"></textarea>
         </div>
     </div>
