--- a/src/main/webapp/people/people.template.html
+++ b/src/main/webapp/people/people.template.html
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="/people/people.styles.css"/>
 </head>
 
-<div class="panel-body">
-    <div class="row">
+<div class="col-md-9" id="panel-body">
+    <div class="row" id="people-container">
         <div class="list-group" id="list-group" ng-repeat="person in people">
             <div class="list-group-item" id="list-group-item">
 
