--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -84,6 +84,14 @@
 
     <div id="content-panel">
 
+        <div class="col-md-3" id="chat-list-container" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+            <div ng-repeat="chat in chats">
+                <div ng-click="openChat(chat.id)" id="contact-panel">
+                    {{chat.id}}
+                </div>
+            </div>
+        </div>
+
         <div ng-view></div>
 
     </div>
