--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -2,25 +2,27 @@
     <link rel="stylesheet" href="/profile/profile.styles.css"/>
 </head>
 
-<div>
-    <div id="username-container">
-        {{profile.firstName}} {{profile.lastName}}
+<div class="col-md-9" id="panel-body">
+    <div id="profile-wrapper">
+        <div id="username-container">
+            {{profile.firstName}} {{profile.lastName}}
 
-        <div id="photo-container">
-            <img ng-src="data:image/jpeg;base64,{{profile.photo}}" id="photo">
-        </div>
+            <div id="photo-container">
+                <img ng-src="data:image/jpeg;base64,{{profile.photo}}" id="photo">
+            </div>
 
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary social-button">Friends</button>
-            <button type="button" class="btn btn-primary social-button">Subscribers</button>
-            <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
-                    ng-click="openChats()">Chats</button>
-            <button type="button" class="btn btn-primary social-button" ng-if="!myProfile()"
-                    ng-click="openChat()">Message</button>
-        </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary social-button">Friends</button>
+                <button type="button" class="btn btn-primary social-button">Subscribers</button>
+                <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
+                        ng-click="openChats()">Chats</button>
+                <button type="button" class="btn btn-primary social-button" ng-if="!myProfile()"
+                        ng-click="openChat()">Message</button>
+            </div>
 
-        <div>
-            user information
+            <div>
+                user information
+            </div>
         </div>
     </div>
 </div>
