--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -87,7 +87,7 @@
         <div class="col-md-3" id="chat-list-container" ng-if="!isAuthority('ROLE_ANONYMOUS')">
             <div ng-repeat="chat in chats">
                 <div ng-click="openChat(chat.id)" id="contact-panel">
-                    {{chat.id}}
+                    {{chat.id}} ({{chat.unreadMessages}})
                 </div>
             </div>
         </div>
