creating friendship query

--- a/src/main/webapp/people/people.template.html
+++ b/src/main/webapp/people/people.template.html
@@ -22,7 +22,8 @@
                 </div>
 
                 <div id="right-container">
-                    <button id="add-friend-button" type="button" class="btn btn-primary btn-sm">
+                    <button id="add-friend-button" type="button" class="btn btn-primary btn-sm"
+                            ng-click="addFriend(person.id)">
                         <span class="glyphicon glyphicon-user"></span> Add friend
                     </button>
                 </div>
