show not reviewed friend requests

--- a/src/main/webapp/people/all.users/all-users.template.html
+++ b/src/main/webapp/people/all.users/all-users.template.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/people/people.styles.css"/>
+    <link rel="stylesheet" href="/people/all.users/all-users.styles.css"/>
 </head>
 
 <div class="col-md-9" id="panel-body">
