--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -23,8 +23,9 @@
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/login/login.component.js"></script>
     <script src="/profile/profile.component.js"></script>
-    <script src="/people/people.component.js"></script>
+    <script src="/people/all.users/all-users.component.js"></script>
     <script src="/chat/chat.component.js"></script>
+    <script src="/people/friend.requests/incoming/incoming-requests.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
@@ -50,7 +51,7 @@
                 </form>
 
                 <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                    <li><a id="find-friends" href="#!/people">Find friends</a></li>
+                    <li><a id="find-friends" href="#!/all-users">Find friends</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
