incoming friend requests view created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -26,6 +26,7 @@
     <script src="/people/all.users/all-users.component.js"></script>
     <script src="/chat/chat.component.js"></script>
     <script src="/people/friend.requests/incoming/incoming-requests.component.js"></script>
+    <script src="/people/friend.requests/outgoing/outgoing-requests.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
