--- a/src/main/webapp/people/all.users/all-users.template.html
+++ b/src/main/webapp/people/all.users/all-users.template.html
@@ -23,7 +23,7 @@
 
                 <div id="right-container">
                     <button id="add-friend-button" type="button" class="btn btn-primary btn-sm"
-                            ng-click="addFriend(person.id)">
+                            ng-click="addFriend(person.id)" ng-if="!myProfile(person.id)">
                         <span class="glyphicon glyphicon-user"></span> Add friend
                     </button>
                 </div>
