--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -27,6 +27,7 @@
     <script src="/chat/chat.component.js"></script>
     <script src="/people/friend.requests/incoming/incoming-requests.component.js"></script>
     <script src="/people/friend.requests/outgoing/outgoing-requests.component.js"></script>
+    <script src="/people/friends/friends.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
