--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -12,7 +12,8 @@
             </div>
 
             <div class="btn-group">
-                <button type="button" class="btn btn-primary social-button">Friends</button>
+                <button type="button" class="btn btn-primary social-button"
+                        ng-click="openFriends()">Friends</button>
 
                 <button type="button" class="btn btn-primary social-button"
                         ng-click="openFriendRequests()">Requests</button>
