--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -53,7 +53,17 @@
                 </form>
 
                 <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                    <li><a id="find-friends" href="#!/all-users">Find friends</a></li>
+                    <li><a id="find-friends-button" href="#!/all-users">Find friends</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                    <li><a id="friends-button" href="#!/friends">Friends</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                    <li><a id="friend-requests-button" href="#!/friends/requests/incoming">Friend requests
+                        ({{newFriendRequests}})
+                    </a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
