--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -12,16 +12,13 @@
             </div>
 
             <div class="btn-group">
-                <button type="button" class="btn btn-primary social-button"
+                <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
                         ng-click="openFriends()">Friends</button>
 
-                <button type="button" class="btn btn-primary social-button"
+                <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
                         ng-click="openFriendRequests()">Requests</button>
 
-                <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
-                        ng-click="openChats()">Chats</button>
-
-                <button type="button" class="btn btn-primary social-button" ng-if="!myProfile()"
+                <button id="message-button" type="button" class="btn btn-primary" ng-if="!myProfile()"
                         ng-click="openChat()">Message</button>
             </div>
 
