opening chat from "friends" page

--- a/src/main/webapp/people/friends/friends.template.html
+++ b/src/main/webapp/people/friends/friends.template.html
@@ -28,9 +28,9 @@
                 </div>
 
                 <div class="right-container">
-                    <button id="confirm-button" type="button" class="btn btn-primary btn-sm"
-                            ng-click="confirm(person.id)">
-                        <span class="glyphicon glyphicon-envelope"></span> Chat
+                    <button id="message-button" type="button" class="btn btn-primary btn-sm"
+                            ng-click="openChat(person.id)">
+                        <span class="glyphicon glyphicon-envelope"></span> Message
                     </button>
                     <button id="remove-button" type="button" class="btn btn-default btn-sm"
                             ng-click="remove(person.id)">
