"search users" front end

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -23,7 +23,7 @@
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/login/login.component.js"></script>
     <script src="/profile/profile.component.js"></script>
-    <script src="/people/all.users/all-users.component.js"></script>
+    <script src="/people/searching/searching.component.js"></script>
     <script src="/chat/chat.component.js"></script>
     <script src="/people/friend.requests/incoming/incoming-requests.component.js"></script>
     <script src="/people/friend.requests/outgoing/outgoing-requests.component.js"></script>
