--- a/src/main/webapp/profile/profile.template.html
+++ b/src/main/webapp/profile/profile.template.html
@@ -4,8 +4,8 @@
 
 <div class="col-md-9" id="panel-body">
     <div id="profile-wrapper">
-        <div id="username-container">
-            {{profile.firstName}} {{profile.lastName}}
+
+        <div id="buttons-container">
 
             <div id="photo-container">
                 <img ng-src="data:image/jpeg;base64,{{profile.photo}}" id="photo">
@@ -13,35 +13,52 @@
 
             <div id="btn-group-top" class="btn-group">
                 <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
-                        ng-click="openFriends()">Friends</button>
+                        ng-click="openFriends()">Friends
+                </button>
 
                 <button type="button" class="btn btn-primary social-button" ng-if="myProfile()"
-                        ng-click="openFriendRequests()">Requests</button>
+                        ng-click="openFriendRequests()">Requests
+                </button>
 
                 <button type="button" class="btn btn-primary wide-button" ng-click="openChat()"
-                        ng-if="isFriendshipStatus(statusFriends)">Message</button>
+                        ng-if="isFriendshipStatus(statusFriends)">Message
+                </button>
 
                 <button type="button" class="btn btn-primary wide-button" ng-click="addFriend(profile.id)"
-                        ng-if="isFriendshipStatus(statusNotFriends)">Add friend</button>
+                        ng-if="isFriendshipStatus(statusNotFriends)">Add friend
+                </button>
 
                 <button type="button" class="btn btn-default wide-button" ng-click="removeFriendRequest(profile.id)"
-                        ng-if="isFriendshipStatus(statusRequested)">Reject your friendship request</button>
+                        ng-if="isFriendshipStatus(statusRequested)">Reject your friendship request
+                </button>
 
                 <button type="button" class="btn btn-primary wide-button" ng-click="confirmFriendRequest(profile.id)"
                         ng-if="isFriendshipStatus(statusNotReviewed) ||
-                                isFriendshipStatus(statusRejected)">Confirm friendship request</button>
+                                isFriendshipStatus(statusRejected)">Confirm friendship request
+                </button>
             </div>
+
             <div id="btn-group-bottom">
                 <button type="button" class="btn btn-default wide-button" ng-click="removeFriend(profile.id)"
-                        ng-if="isFriendshipStatus(statusFriends)">Remove from friends</button>
+                        ng-if="isFriendshipStatus(statusFriends)">Remove from friends
+                </button>
 
                 <button type="button" class="btn btn-default wide-button" ng-click="rejectFriendRequest(profile.id)"
-                        ng-if="isFriendshipStatus(statusNotReviewed)">Reject friendship request</button>
-            </div>
-
-            <div id="user-information">
-                user information
+                        ng-if="isFriendshipStatus(statusNotReviewed)">Reject friendship request
+                </button>
             </div>
         </div>
+
+        <div id="user-information-container">
+            <div id="internal-information-container">
+                <div id="username-container">
+                    {{profile.firstName}} {{profile.lastName}}
+                </div>
+                <div id="user-information">
+                    user information
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
