"profile editor" page created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -28,6 +28,7 @@
     <script src="/people/friend.requests/incoming/incoming-requests.component.js"></script>
     <script src="/people/friend.requests/outgoing/outgoing-requests.component.js"></script>
     <script src="/people/friends/friends.component.js"></script>
+    <script src="/profile/profile.editor/profile-editor.component.js"></script>
 </head>
 <body ng-controller="navbarCtrl">
 
