--- a/src/main/webapp/profile/profile.editor/profile-editor.template.html
+++ b/src/main/webapp/profile/profile.editor/profile-editor.template.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/profile/profile.styles.css"/>
+    <link rel="stylesheet" href="/profile/profile.editor/profile-editor.styles.css"/>
 </head>
 
 <div class="col-md-9" id="panel-body">
@@ -53,10 +53,6 @@
             <div id="internal-information-container">
                 <div id="username-container">
                     {{profile.firstName}} {{profile.lastName}}
-                    <a href="#!/profile/edit">
-                        <span id="edit-button" class="glyphicon glyphicon-edit" title="Edit information"
-                              ng-if="myProfile()"></span>
-                    </a>
                 </div>
                 <div id="user-information">
                     user information
